--- a/bootharness.html
+++ b/bootharness.html
@@ -44,7 +44,9 @@
 <h1 style="margin:15px 0 0 0; font-size:100px; color:#222c52;">Wolf Claw</h1>
 <h1 style="margin:0px 0 0 0; font-size:42px; color:#222c52;"><b>Pole &amp; Tree Climbing Boot Harness</b></h1>
 <h1 style="margin:0px 0 0 0; font-size:32px; color:#222c52;"><b>Wolf Claw Tree and Pole Climbing Accessories</b></h1>
+
 </div>
+
 
 
 
@@ -54,9 +56,14 @@
 <div class="accessories">
 
 
-<div class="leftside" style="width:750px;">
-<p style="padding:25px 0 0 0px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; padding-left:20px; padding-right:15px; line-height:30px;">Everything on the Wolf Claw and Tree Climbing Boot Harness is replaceable. We manufacture and stock a full line of accessories for the Wolf Claw. Show and described on the right are the accessories and parts available for the Wolf Claw. </p>
+<div class="leftside treemid" style="width:750px;">
+<p style="padding:25px 0 0 0 140px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; padding-left:20px; padding-right:15px; line-height:30px;">Everything on the Wolf Claw and Tree Climbing Boot Harness is replaceable. We manufacture and stock a full line of accessories for the Wolf Claw. Show and described on the right are the accessories and parts available for the Wolf Claw. </p>
 <p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; line-height:28px;">We also offer replacement neoprene boot liners and Wolf Claw carring bags (shown below). Ever Wolf CLaw CLimbing Boot Harness comes with the full compliment of accessories including the handy carrying bag. If you would like to order accessories for your Wolf Claw online, proceed to our Acessories Order Form.</p> 
+</div>
+<div>
+<img id="picharness" src="WCright.jpg" </img>
+</div>
+</div>
 
 
 </div>
@@ -85,7 +92,7 @@
 <p>7.Neoprene Replacement Liners - The Neoprene liners are designed to make the boot fit snugly and securely. A snug fit is essential for confortable and safe climbing. The holes in the liners are cut to ventilate the leg area. The liners affix to the boot shell with velcro strips. For saller climbers we off spacers which fit between the liners and the shell. Using spacers, everyone has a safe secure fit- regardless of their size.</p>
 </div>
 <p id="bag">8. The Wolf Claw Carrying Bag- Your Wolf CLaw, and all of it's accessories fit into the Wolf Claw carrying bag. The bag allows you to grab your boots (and all the accessories) and put them in the climbing truck for convenience.
-<img id="wolfbag" src="wolfbag.jpg">
+
 
 </div>
 
@@ -101,7 +108,7 @@
 
 
 
-<div class="botton">
+<div class="bootharness">
 <div class="last"><h1 style="line-height:40px; padding:40px 0 0 0;">EXACTA<br>PLASTIC, INC.</h1></div>
 <div class="last">
 <h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
