--- a/scrapers.html
+++ b/scrapers.html
@@ -80,8 +80,8 @@
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
 <div class="bottommenu"><a href="about.html">ABOUT US</a></div>
 <div class="bottommenu"><a href="service.html">SERVICE</a></div>
-<div class="bottommenu"><a href="wolfclaw.html">WOLFCLAW</a></div>
-
+<div class="bottommenu"><a href="product.html">PRODUCTS</a></div>
+<div class="bottommenu"><a href="contact.html">CONTACT US</a></div>
 
 </div>
 
@@ -91,7 +91,7 @@
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:40px;">137 N. Joy St.<br>Corona, CA 92879<br>Ph. (818) 768-1234</div>
 </div>
 
-<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; excataplastics.com 2017</div>
+<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; alphaonestategy.com 2017 <div>
 <div class="bottommenu" style="width:1050px; float:left; background-color:#09014c; color:#000; height:25px;"></div>
 
 
