--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
 
 <div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
-<i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
+<a href="tooling.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
+<a href="services.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
 <i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
