--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ fieldset {
 }
 </style>
 <div class="container">  
-  <form id="contact" action="mailto:example@example.com" method="post" enctype="text/plain">
+  <form id="contact" action="mailto:info@exactaplastics.com" method="post" enctype="text/plain">
     
     <fieldset>
       <input placeholder="Full Name" name="name" type="text" tabindex="1" required autofocus>
