finished boot harness page

--- a/about.html
+++ b/about.html
@@ -72,7 +72,9 @@
 <div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
 <a href="tooling.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
-<a href="services.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
+<a href="services.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br/></a>
+<i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
+</p>
 <i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
