tooling.html and a lot of css fixing

--- a/services.html
+++ b/services.html
@@ -47,6 +47,7 @@
 
 <img class="gearbanner gearpadding" src="gears.jpg">
 <h1 id="pim">Plastic Injection Molding</h1>
+<hr>
 
 <div class="fontcolor">
 
@@ -267,10 +268,10 @@ fieldset {
 
 
 </div>
+<img class="leftservice" img="abb.jpg">
 
-
-<div class="last">
-<h2 style="text-align:center;  margin:15px 0 15px 0;">Contact Us</h2>
+<div class="last contactright">
+<h2 style="text-align:center; text-align:center; margin:15px 0 15px 0;">Contact Us</h2>
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:30px;">137 N. Joy St.<br />Corona, CA 92879<br />Ph. (818) 768-1234</div>
 </div>
 
