--- a/tooling.html
+++ b/tooling.html
@@ -21,7 +21,7 @@
          <div class="menu">
 <div class="insidemenu">
 
-  <img class="navservices" src="logo.jpeg"/>
+  <img id="toolinglogo" src="logo.jpeg"/>
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
@@ -47,28 +47,38 @@
 <div class="content">
 
 <img class="gearbanner gearpadding" src="gears.jpg">
-<h1>Tooling</h1>
+<h1 id="Tfont">Tooling<h1>
 <div id="tool">
-<p>hello world</p>
+<img id="firstpic" src="bootone.jpg"/>
 </div>
 
-<div class="fontcolor">
-
-
+<div id="textright">
+<p id="one">
+* Instant mold and part quote.
+</p>
+<p id="two">
+* Low cost, fast turnaround, excellent quality plastic injection molds.
+</p>
+<p id="three">
+* Designed and built to U.S. standards.
+</p>
+<p id="four">
+* Various mold making capabilities, including hot runner, core pull,
+and slide mechanisms.
+</p>
+</div>
 
 <div class="botton">
-<div class="last"><h1 style="line-height:40px; padding:40px 0 0 0;">EXACTA<br />PLASTIC, INC.</h1></div>
+<div class="last"><h1 style="line-height:40px; font-size:25px; padding:40px 0 0 0;">EXACTA<br />PLASTIC, INC.</h1></div>
 <div class="last">
-<h2 style="text-align:center; margin:15px 0 15px 0 border-bottom:2px white;">Link</h2>
-<hr>
-<div class="bottommenu"<a href="index.html">HOME</a></div>
-<div class="bottommenu"><a href="about.html">ABOUT US</a></div>
-<div class="bottommenu"><a href="services.html">SERVICES</a></div>
-<div class="bottommenu"><a href="wolfclaw.html">WOLFCLAW</a></div>
+<h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
+<div class="bottommenu" style="border-top: #FFF solid 2px; text-align:left; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
+<div class="bottommenu left"><a href="about.html">ABOUT US</a></div>
+<div class="bottommenu left"><a href="services.html">SERVICES</a></div>
+<div class="bottommenu left"><a href="wolfclaw.html">WOLFCLAW</a></div>
 
 
 </div>
-
 
 
 <div class="last">
@@ -86,9 +96,12 @@
 
 </div>
 </div>
-
+</div>
 
 
 
 </body>
 </html>
+
+
+
