changed a lot of html and css

--- a/tooling.html
+++ b/tooling.html
@@ -6,7 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
 
-<script src="https://use.fontawesome.com/2691ad8745.js"></script>
+ 
+ <script src="https://use.fontawesome.com/2691ad8745.js"></script>
  <!-- Compiled and minified CSS -->
  <script src="https://use.fontawesome.com/1bf1d75aae.js"></script>
   
@@ -48,6 +49,7 @@
 
 <img class="gearbanner gearpadding" src="gears.jpg">
 <h1 id="Tfont">Tooling<h1>
+<hr>
 <div id="tool">
 <img id="firstpic" src="bootone.jpg"/>
 </div>
@@ -66,9 +68,12 @@
 * Various mold making capabilities, including hot runner, core pull,
 and slide mechanisms.
 </p>
-</div>
 
-<div class="botton">
+
+</div>
+<h1 id="fntsize">Hand Molds</h1>
+</div>
+<div id="botton">
 <div class="last"><h1 style="line-height:40px; font-size:25px; padding:40px 0 0 0;">EXACTA<br />PLASTIC, INC.</h1></div>
 <div class="last">
 <h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
