99 percent done with PIM page

--- a/services.html
+++ b/services.html
@@ -49,10 +49,10 @@
 <h1 id="pim">Plastic Injection Molding</h1>
 <hr>
 
-<div class="fontcolor">
 
 
-<p style="margin:20px 0 0 56px;  padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
+<p style="margin:0 0 0 -12px;  padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
+
 <p  style="margin:0 0 0 12px; padding:5px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;"><i class="fa fa-minus" aria-hidden="true"></i> Complete plastic injection molding from India and USA.</p>
 <p  style="margin:0 0 0 -26px; padding:5px 0;  font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Machine sizes ranging from 50 tons to 500 tons.
 </p>
@@ -64,8 +64,11 @@
 <p style="margin:0 0 0 152px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
 <p style="margin:0 0 0 -65px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
 <p style="margin:0 0 0 -92px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
+
+
 </div>
-</div>
+
+
 
 
 <div class="aftercontent">
@@ -76,9 +79,11 @@
 
 
 
-</div>
 
 <div class="rightside">
+<div>
+ <img id="srvc" src="services.jpg">
+ </div>
 <div class="title" style="text-align:left;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT US</div>
 
 <style>
