--- a/tooling.html
+++ b/tooling.html
@@ -49,33 +49,12 @@
 
 <img class="gearbanner gearpadding" src="gears.jpg">
 <h1 id="Tfont">Tooling<h1>
-
-<div id="tool">
-<img id="firstpic" src="bootone.jpg"/>
+<hr>
+<div id="tool1">
+<img src="tool1.jpg">
+<img src=tool1.jpg">
 </div>
-<ul>
-<li>
-<p id="one">
-* Instant mold and part quote.
-</p>
-</li>
-<li>
-<p id="two">
-* Low cost, fast turnaround, excellent quality plastic  injection molds.
-</p>
-</li>
-<li>
-<p id="three">
-* Designed and built to U.S. standards.
-</p>
-<li>
-<p id="four">
-* Various mold making capabilities, including hot runner, core pull,
-and slide mechanisms.
-</p>
-</li>
-</ul>
-
+</div>
 
 
 <div id="botton">
