--- a/bootharness.html
+++ b/bootharness.html
@@ -4,6 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
+
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
  <!-- Compiled and minified CSS -->
   
@@ -13,24 +14,29 @@
 </head>
 
 <body>
-<div class="topheader">
-<div class="insidetop">
 
-</div>
-
-<div class="menu">
+  
+         <div class="menu">
 <div class="insidemenu">
 <ul>
+  <img class="navlogo" src="logo.jpeg"/>
+  
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
-  <li><a href="index.html">Services</a></li>
+  <li><a href="services.html">Services</a></li>
   <li class="dropdown">
-  <a href="javascript:void(0)" class="dropbtn">Product</a>
+  <a href="javascript:void(0)" class="dropbtn">Products</a>
+
+
+  
+
   <div class="dropdown-content">
-      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
-      <a href="gangboxes.html">Gang Boxes</a>
+      <a href="scrapers.html">Non-Metallic Scrappers</a>
+      <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
       <a href="wolfclaw.html">Wolf Claw</a>
+
+      
     </div>
   </li>
   
