actual final commit

--- a/services.html
+++ b/services.html
@@ -43,6 +43,9 @@
 </div>
   
 
+
+
+
 <div class="content">
 
 <img class="gearbanner gearpadding" src="gears.jpg">
@@ -67,9 +70,7 @@
 
 
 </div>
-
-
-
+</body>
 
 <div class="aftercontent">
 
