--- a/services.html
+++ b/services.html
@@ -62,12 +62,11 @@
 <p style="margin:0 0 0 60px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Complimentary product design and consulting with quick prototype turn around.</p>
 <p style="margin:0 0 0 70px; padding:5px 0;  font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Consistany scientific molding, high quality, tight tolerances, and shorter lead time.</p>
 <p style="margin:0 0 0 65px;  padding:5px 0; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Value added assemby and packing, inventory protection and free local deleveries.</p>
-<p style="margin:0 0 0 153px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true">
-  </i> Designing, building, and maintaing the most demanding molds and prototype tooling.</p>
-<p style="margin:0 0 0 55px;  padding:5px 0; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities of building biodegradeble and compostable material.</p>
-<p style="margin:0 0 0 152px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
-<p style="margin:0 0 0 -65px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
-<p style="margin:0 0 0 -92px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
+
+<p style="margin:0 0 0 -19px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i>Capabilities of building biodegradeble and compostable material </p><p style="margin:0 0 0 84px;  padding:5px 0; font-size:24px; width:101%;"> <p style="margin:0 0 0 80px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i>Capabilities to submit critical inspection data, including firt article report submission. </p>
+<p style="margin:0 0 0 -134px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
+<p style="margin:0 0 0 -160px;  padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
+
 
 
 </div>
@@ -84,7 +83,7 @@
 
 <div class="rightside">
 <div>
- <img id="srvc" src="services.jpg">
+ <img id="srvc" src="pim2.png">
  </div>
 <div class="title" style="text-align:left;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT US</div>
 
